--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,12 @@
 # App
 DB_TYPE=
-PG_HOST=db
+PG_HOST=localhost
 PG_USER=
 PG_PASSWORD=
 PG_DB=
 PG_PORT=
+JWT_SECRET=
+PASSWORD_SECRET=
 
 # Database
 POSTGRES_USER=
